# rosalind

./: .flake8  .pre-commit-config.yaml  Calculating Expected Offspring.html  Independent Alleles.html  Init.ipynb  Init.py  Mortal Fibonacci Rabbits.html  README.md  Rabbits and Recurrence Relations.html  Transalting RNA into Protein.html  all_problems.md  change_filenames.py  pyproject.toml
1. Counting DNA Nucleotides/: 1. Counting DNA Nucleotides.ipynb  Counting DNA Nucleotides.py  context.md
2. Transcribing DNA into RNA/: 2. Transcribing DNA into RNA.ipynb  Transcribing DNA into RNA.py  rosalind_rna.txt
3. Complementing a Strand of DNA/: (Clone) test.ipynb  3. Complementing a Strand of DNA.ipynb  3. Complementing a Strand of DNA.py  context.md  test.ipynb
5. Computing GC Content/: 5. Computing GC Content.ipynb  context.md  rosalind_gc.txt
Python Village/: Conditions and Loops.md  Conditions and Loops.py  Dictionairies.py  Installing Python.md  Installing Python.py  Strings and Lists.py  Variables and Some Arithmetic.md  Variables and Some Arithmetic.py  Working with Files.md  Working with Files.py
Template Problem/: Template Problem.ipynb  Template Problem.md  Transalting RNA into Protein.ipynb
python_village/: conditions_and_loops.ipynb  conditions_and_loops.md  dictionairies.ipynb  dictionairies.md  installing_python.ipynb  installing_python.md  strings_and_lists.ipynb  strings_and_lists.md  variables_and_some_arithmetic.ipynb  working_with_files.ipynb  working_with_files.md
rosalind/: alignment.py  combinatorics.py  computational_mass_spectometry.py  (+3 more)
(+211 files in other folders)
