[tool.poetry]
name = "rosalind"
version = "0.1.0"
description = ""
authors = ["Thibauld Braet <thibauld@live.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
